--- a/doc/dissertation/resources/implementation.tex
+++ b/doc/dissertation/resources/implementation.tex
@@ -28,7 +28,8 @@ This section will:
 \label{sub:building_the_verification_framework}
 % Need to discuss the practicalities of solving the mutually recursive rule problem (the production trace and additional RuleTag types). 
 % The theoretical underpinning of this. 
-
+% Fun with the state monad for the verification algorithm.
+% Examine the design problem of providing reporting abilities via the RuleTag concept -> not in the core algorithm, so hence an addition to it.
 
 % subsection building_the_verification_framework (end)
 
