Completed draft of semantic inference algorithms.

--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -78,6 +78,8 @@
 \newcommand{\ra}{\rangle}
 
 % Some algorithm shorthand
+\newcommand{\Map}[2]{\textbf{map} #1 #2}
+\newcommand{\Reduce}[3]{\textbf{reduce} #1 #2 #3}
 
 \newcounter{requirementcounter}
 \newcommand*{\reqlabel}[1]{R\refstepcounter{requirementcounter}\therequirementcounter\label{#1}}
